<resources>
<!--    <string name="app_name">Persia Test</string>-->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
<!--    <string name="login_title">Login to Account</string>-->
<!--    <string name="btn_login">Login</string>-->
<!--    <string name="mobile_number">Mobile Number</string>-->
<!--    <string name="password">Password</string>-->
<!--    <string name="invalid_mobile">Invalid Mobile Number</string>-->
<!--    <string name="invalid_password">Invalid Password</string>-->
<!--    <string name="incorrect_credentials">Login Credentials Incorrect</string>-->
<!--    <string name="login_failed">Login Failed</string>-->
<!--    <string name="about_us">About Us</string>-->
<!--    <string name="profile">Profile</string>-->
<!--    <string name="product_section">Products</string>-->
<!--    <string name="accounting_section">Accounting</string>-->
<!--    <string name="products">Products</string>-->
<!--    <string name="brands">Brands</string>-->
<!--    <string name="actual_products">Actual Products</string>-->
<!--    <string name="variants">Variants</string>-->
<!--    <string name="incomes">Incomes</string>-->
<!--    <string name="costs">Costs</string>-->
<!--    <string name="amountToman">Amount (Toman)</string>-->
<!--    <string name="amountRial">Amount (Rial)</string>-->
<!--    <string name="amount">Amount</string>-->
<!--    <string name="date">Date</string>-->

    <string name="app_name">Persia Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">ورود به پرشیا اطلس</string>
    <string name="btn_login">ورود</string>
    <string name="mobile_number">شماره موبایل</string>
    <string name="password">رمز عبور</string>
    <string name="invalid_mobile">شماره موبایل نامعتبر است</string>
    <string name="invalid_password">رمز عبور نامعتبر است</string>
    <string name="incorrect_credentials">نام کاربری یا رمز عبور نامعتبر است</string>
    <string name="login_failed">خطا در ورود</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="submit">ثبت</string>
    <string name="about_us">درباره ما</string>
    <string name="profile">پروفایل</string>
    <string name="avatar">آواتار</string>
    <string name="avatarImage">عکس آواتار</string>
    <string name="selectAvatar">انتخاب آواتار</string>
    <string name="firstname">نام</string>
    <string name="lastname">نام خانوادگی</string>
    <string name="product_section">محصولات</string>
    <string name="accounting_section">حساب داری</string>
    <string name="dkpc">DKPC</string>
    <string name="dkpcColon">:DKPC</string>
    <string name="product">محصول</string>
    <string name="productColon">محصول:</string>
    <string name="products">محصولات</string>
    <string name="brand">برند</string>
    <string name="brands">برندها</string>
    <string name="actual_product">محصول اصلی</string>
    <string name="actual_products">محصولات اصلی</string>
    <string name="variant">تنوع</string>
    <string name="variants">تنوع ها</string>
    <string name="income">درآمد</string>
    <string name="incomes">درآمدها</string>
    <string name="cost">هزینه</string>
    <string name="costs">هزینه ها</string>
    <string name="amountToman">مقدار (تومان)</string>
    <string name="amountRial">مقدار (ریال)</string>
    <string name="amount">مقدار</string>
    <string name="date">تاریخ</string>
    <string name="selector">انتخابگر</string>
    <string name="selectorColon">انتخابگر:</string>
    <string name="priceMin">قیمت کف</string>
    <string name="priceMinRial">قیمت کف (ریال)</string>
    <string name="priceMinRialColon">قیمت کف (ریال):</string>
    <string name="hasCompetition">دارای رقیب</string>
    <string name="hasCompetitionColon">دارای رقیب:</string>
    <string name="isActive">فعال</string>
    <string name="hisActiveColon">فعال:</string>
</resources>