<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.panel.products.variant.detail.VariantDetailFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant"
            android:layout_marginBottom="16dp"
            android:textSize="30sp" />

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/DetailFieldLayout"-->
<!--            android:hint="@string/product">-->

<!--            <EditText-->
<!--                android:id="@+id/variantProductEditText"-->
<!--                style="@style/DetailFieldEditText"-->
<!--                android:ems="10"-->
<!--                android:importantForAutofill="no"-->
<!--                android:inputType="text" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.textfield.TextInputLayout
            style="@style/DetailFieldLayout"
            android:hint="@string/dkpc">

            <EditText
                android:id="@+id/variantDKPCEditText"
                style="@style/DetailFieldEditText"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/DetailFieldLayout"
            android:hint="@string/priceMinRial">

            <EditText
                android:id="@+id/variantPriceMinEditText"
                style="@style/DetailFieldEditText"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>
